--- a/static/agents.html
+++ b/static/agents.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="css/new.css"/>
     <link rel="stylesheet" href="css/chat.css"/>
     <script src="js/htmx.min.js"></script>
-    <script src="js/client-side-templates.js"></script>
-    <script src="js/mustache.js"></script>
     <script src="dist/ndk.js"></script>
     <script src="dist/nostr/nostr-agent.js"></script>
 
@@ -106,13 +104,8 @@
 </head>
 
 <body class="bg-black text-white font-mono mt-8 mb-8">
-    <div hx-ext="client-side-templates">
-        <div hx-get="/templates/header.json"
-             hx-trigger="load"
-             mustache-template="header-template">
-        </div>
-
-        <template id="header-template">
+    <div>
+        <div>
             <header class="py-2 mb-5">
                 <div class="flex justify-between items-center w-full">
                     <span class="text-lg font-bold">OpenAgents</span>
@@ -120,17 +113,35 @@
                 <div class="mt-4">
                     <nav>
                         <ul class="grid grid-cols-3 gap-2 lg:grid-cols-6" id="nav-buttons">
-                            {{#buttons}}
                             <li class="flex justify-center mb-1">
                                 <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                                   href="{{href}}">{{text}}</a>
+                                   href="/">Home</a>
                             </li>
-                            {{/buttons}}
+                            <li class="flex justify-center mb-1">
+                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                                   href="/agents">Agents</a>
+                            </li>
+                            <li class="flex justify-center mb-1">
+                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                                   href="/nostr">Nostr</a>
+                            </li>
+                            <li class="flex justify-center mb-1">
+                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                                   href="/video-series">Video Series</a>
+                            </li>
+                            <li class="flex justify-center mb-1">
+                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                                   href="/company">Company</a>
+                            </li>
+                            <li class="flex justify-center mb-1">
+                                <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
+                                   href="/contact">Contact</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
             </header>
-        </template>
+        </div>
     </div>
 
     <div class="py-5 border-b border-zinc-800 mb-5">
@@ -149,11 +160,12 @@
                       hx-on="submit: event.preventDefault()">
                     <div class="form-group mb-4">
                         <label for="agent-name" class="block text-sm font-medium text-gray-700">Agent Name</label>
-                        <div hx-get="/templates/textinput.mustache"
-                             hx-trigger="load"
-                             hx-target="#agent-name-container">
+                        <div>
+                            <div class="form-group">
+                                <label for="agent-name" class="block text-sm font-medium text-gray-700">Agent Name</label>
+                                <input type="text" id="agent-name" name="name" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" placeholder="Enter agent name" value="">
+                            </div>
                         </div>
-                        <div id="agent-name-container"></div>
                     </div>
                     <div class="form-group mb-4">
                         <label for="agent-description" class="block text-sm font-medium text-gray-700">Description</label>
